--- a/mockup-html/css/style.less
+++ b/mockup-html/css/style.less
@@ -15,7 +15,10 @@
 @xxl: 60px;
 @xxxl: 80px;
 
-@wrapper-width: 220px + 60px + 708px + 60px + 220px;
+@player-width: 210px;
+@content-width: 498px;
+@breves-width: 370px;
+@wrapper-width: @player-width + 60px + @content-width + 50px + @breves-width;
 
 @import "mixins";
 @import "forms";
@@ -92,27 +95,27 @@ div.wrapper {
     .squash(.5);
     }
 .menuMedia {
-    color:@orange;
-    width:210px;
+    color: @orange;
+    width: @player-width;
     a, a:active, a:visited {
-      color: @orange;
+        color: @orange;
     }
-    }
+}
 
 .menuEmissions {
-    color:@black;
-    width:498px;
+    color: @black;
+    width: @content-width;
     margin-left:60px;
-    }
+}
 
 .menuNews {
-    color:@blue;
-    width:370px;
-    margin-left:58px;
+    color: @blue;
+    width: @breves-width;
+    margin-left:50px;
     a, a:active, a:visited {
       color: @blue;
     }
-    }
+}
 
 
 h1 {
@@ -124,7 +127,7 @@ h1 {
 h2 {
     font-size: @m;
 }
-h3 {
+h3, input[type=submit], input[type=text].fullwidth {
     font-family: Reglo;
     text-transform:uppercase;
     .squash(1, 2);
@@ -132,6 +135,7 @@ h3 {
     line-height: 110%;
     margin-bottom: 48px;
 }
+
 h4 {
    font-size: @m*1.1;
   font-family: RE03;
@@ -210,7 +214,7 @@ ul.tags li {
 .player {
     color: @orange;
     float: left;
-    width: 210px;
+    width: @player-width;
     
 }
 
@@ -279,7 +283,7 @@ ul.tags li {
 /**** Emission / Content ****/
 
 div.content {
-    width: 498px;
+    width: @content-width;
     float: left;
     margin-left: 60px;
 }
@@ -705,7 +709,7 @@ div.header-controlsArchives .symbols {
 }
 
 .breves {
-    width: 370px;
+    width: @breves-width;
     float: left;
     margin-left: 50px;
 }
